# llama_hexagon

./: .gitignore  llama_hexagon_log.txt
ggml/src/ggml-hexagon/: 8bit_NPU_MatMul_README.md  CMakeLists.txt  ggml-hexagon.cpp
prebuilts/QNN_SDK/qairt/2.35.0.250530/: GENIE_README.txt  NOTICE.txt  QAIRT_ReleaseNotes.txt  QNN_NOTICE.txt  QNN_README.txt  QNN_TFLITE_DELEGATE_ReleaseNotes.txt  sdk.yaml
prebuilts/QNN_SDK/qairt/2.35.0.250530/benchmarks/QNN/: qnn_bench.py
prebuilts/QNN_SDK/qairt/2.35.0.250530/benchmarks/SNPE/: snpe_bench.py
prebuilts/QNN_SDK/qairt/2.35.0.250530/docs/Genie/: genindex.html  index.html  search.html  searchindex.js
prebuilts/QNN_SDK/qairt/2.35.0.250530/docs/QNN/: genindex.html  index.html  search.html  searchindex.js
prebuilts/QNN_SDK/qairt/2.35.0.250530/examples/QNN/MatMulBenchmark/: CMakeLists.txt  MatMulBenchmark.cpp  README.md  qnn_run.sh
prebuilts/QNN_SDK/qairt/2.35.0.250530/examples/QNN/MatMulBenchmark/matmul_results/: Attention_GFLOPS.csv  Attention_Time_ms.csv  FFN_Down_GFLOPS.csv  FFN_Down_Time_ms.csv  FFN_Up_GFLOPS.csv  FFN_Up_Time_ms.csv  Linear_GFLOPS.csv  Linear_Time_ms.csv  fp16_fp16.txt  fp32_fp32.txt  int16_int16.txt  int8_int8.txt  parse_results.py
prebuilts/QNN_SDK/qairt/2.35.0.250530/include/Genie/: GenieCommon.h  GenieDialog.h  GenieEmbedding.h  GenieEngine.h
scripts/: README_memory_monitor.md  monitor_memory.sh  plot_memory_usage.py  plot_memory_usage_simple.py  run_inference_with_memory_monitor.sh
tests/: CMakeLists.txt  README-matmul-benchmark.md  matmul-benchmark.cpp  test-backend-ops.cpp
(+4494 files in other folders)
